--- a/templates/about.html
+++ b/templates/about.html
@@ -117,7 +117,7 @@
                 </div>
                 <div class="col-lg-5 col-md-6">
                     <div class="about_info pl-68">
-                        <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Perseverance Excellence & Service</h4>
+                        <h4 class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".5s">Perseverance.Excellence.Service</h4>
                         <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">It is our unwavering commitment to the highest quality education that has sped us along on this journey. I would also like to thank the generations of parents who have entrusted us with the care and education of their children.</p><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> It is their faith and belief in the PES values – Perseverance, Excellence and Service – that has helped us come this far. I believe that education has a pivotal role to play in the progress of a nation. We realize that our students represent the future of our society and we take our responsibility seriously. </p>
                     </div>
                 </div>
@@ -126,7 +126,7 @@
                  <div class="col-lg ">
                     <div class="section_title text-center mb-80">
                         <br>
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">We ensure that the rock-solid foundation we help them build here – both, in terms of skills and values – will stand them in good stead no matter which career they choose. Along with the requisite academic and related skills, we try and instill empathy for the less fortunate in our students and a concern for the environment around them.</p><br><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> We create opportunities not just for young people to learn, but also for them to experience the fulfillment that comes from sharing this learning with others. At PES, we will always be focused on delivering education that will help create the leaders of tomorrow’s world – men and women who will not just be successful in their individual capacities, but who will in turn, contribute to and nurture the world they live in.</p>
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">We ensure that the rock-solid foundation we help them build here – both, in terms of skills and values – will stand them in good stead no matter which career they choose. Along with the requisite academic and related skills, we try and instil empathy in our students for the less fortunate and a concern for the environment around them.</p><br><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> We create opportunities not just for young people to learn, but also for them to experience the fulfillment that comes from sharing this learning with others. At PES, we will always be focused on delivering education that will help create the leaders of tomorrow’s world - men and women who will not just be successful in their capacities, but also contribute to and enrich the world they live in.</p>
                     </div>
             </div>
         </div>
@@ -153,7 +153,7 @@
                                          </div>
                                     <!-- </section> -->
                                     <p class="  wow fadeInLeft" data-wow-duration="1s" style="margin-left: 10%;margin-right: 10%;" data-wow-delay=".6s">
-                                        PES University's vision is to create a professionally superior and ethically strong global workforce, instilling in students a sense of history, ethical values, commitment to law and morality, appreciation of human creativity, and an analytical mindset. The campus features top-notch infrastructure, including well-lit classrooms, cutting-edge laboratories, fully equipped workshops, secure hostels, modern cafeterias, and excellent sports and recreation facilities, ensuring a stimulating campus life. With three state-of-the-art campuses in Bangalore and an international campus in South Asia, PES University offers a transformative educational experience, promising a lifetime of success.
+                                        PES University's vision is to cultivate a globally competitive, professionally adept and ethically sound workforce. The university aims to impart in its students a firm grounding in history, ethical values, commitment to law and morality, appreciation of human creativity, and an analytical mindset. The campus boasts top-notch facilities, including well-lit classrooms, cutting-edge laboratories, fully equipped workshops, secure hostels, modern cafeterias, and excellent sports and recreation facilities, ensuring a vibrant campus life. With three state-of-the-art campuses in Bangalore and an international campus in South Asia, PES University offers a life-changing educational experience, setting students up for a successful future.
                                     </p>
                                     <!-- <p class="wow fadeInLeft" data-wow-duration="1s" style="align-items: center;" data-wow-delay=".6s">
                                         ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ ‎ 
@@ -238,14 +238,17 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8">
                     <div class="footer_widget">
-                        <div class="address_details text-center align-items-center">
-                            <img src="static/img/about/something.png" alt="TAS logo_png">
+                        
+                        <div class="footer-logo-container">
+                            <img src="static/img/about/something.png" alt="TAS logo" class="footer-logo-image">
                             <h1> </h1>
                             <!-- <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Come Meet Us!</h3> -->
                             <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
-                            
+                            <div class="row justify-content-center book_btn">
+                                <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="register-btn">REGISTER NOW</a>
+                            </div>
                            
-                             -->
+                            
                                 <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
                                 <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
                                 </div>
@@ -263,9 +266,9 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="/aboutPESU">About PESU</a></li>
                             <li><a href="/about">History</a></li>
-                                <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
+                            <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                             <li><a href="#">Events</a></li>
-
+                            <li><a href="https://www.instagram.com/pesu.tams?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
                         </ul>
                     </div>
                 </div>
@@ -311,8 +314,8 @@
     <div class="copy-right_text" style="margin-top: -5%;">
         <div class="container">
             <div class="row">
-                <div class="col-xl-12">
-                    <img src="static/img/banner/footer_banner.png" alt="TAS logo_png">
+                <div class="footer-banner-container">
+                    <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
                     <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                         <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
@@ -321,6 +324,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 </footer>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBkknk-COtrln-pr2jglroqi0D0HhjPuu0"></script>
