--- a/templates/index.html
+++ b/templates/index.html
@@ -59,13 +59,14 @@
                                     </nav>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                            <div class="col-xl-3 col-lg-3">
                                 <div class="buy_tkt">
                                     <div class="book_btn">
-                                        <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="d-none d-lg-block">REGISTER NOW</a>
+                                        <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="header-register-btn d-none d-lg-inline-block">REGISTER NOW</a>
                                     </div>
                                 </div>
                             </div>
+                            
                             <div class="col-12">
                                 <div class="mobile_menu d-block d-lg-none"></div>
                             </div>
@@ -311,27 +312,28 @@
 
 <footer class="footer">
     <div class="footer_top">
-                    <div class="container">
+        <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-8">
                     <div class="footer_widget">
                         <div class="address_details text-center align-items-center">
-                            <img src="static/img/about/something.png" alt="TAS logo_png">
-                            <h1> </h1>
-                            <!-- <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Come Meet Us!</h3> -->
-                            <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
-                            
-                           
-                             -->
+                            <div class="footer-logo-container">
+                                <img src="static/img/about/something.png" alt="TAS logo" class="footer-logo-image">
+                            </div>
+                            <div class="footer-content">
+                                <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
                                 <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
-                                <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
+                                    <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-           
+            <div class="row justify-content-center book_btn">
+                <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="register-btn">REGISTER NOW</a>
+            </div>
             <div class="row justify-content-center" style="margin-right: -12%;">
                 <div class="col-md-3" style="border-left: 1px solid white;">
                     <div class="footer_widget">
@@ -340,9 +342,9 @@
                             <li><a href="/">Home</a></li>
                             <li><a href="/aboutPESU">About PESU</a></li>
                             <li><a href="/about">History</a></li>
-                                <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
+                            <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                             <li><a href="#">Events</a></li>
-
+                            <li><a href="https://www.instagram.com/pesu.tams?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
                         </ul>
                     </div>
                 </div>
@@ -385,16 +387,18 @@
         </div>
 
     </div>
-    <div class="copy-right_text" style="margin-top: -5%;">
+    <div class="copy-right_text">
         <div class="container">
             <div class="row">
-                <div class="col-xl-12">
-                    <img src="static/img/banner/footer_banner.png" alt="TAS logo_png">
-                    <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                    </p>
+                <div class="col-xl-12 text-center">
+                    <div class="footer-banner-container">
+                        <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
+                    </div>
+                    <div class="copyright-content">
+                        <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                            &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
