--- a/templates/Program.html
+++ b/templates/Program.html
@@ -149,7 +149,7 @@
                                     <span>Unleash your coding wizardry and creative genius in this high-octane hackathon. Dive into a world of algorithms, logic, and innovation as you race against the clock to develop groundbreaking solutions.
                                         <br><br>&#x2022;Number of participants - 228
                                         <br>&#x2022;Number of teams - 76
-                                        <br>&#x2022;Number of people in one team - 3
+                                        <br>&#x2022;Number of people in one team - 2
                                         </span>
                                 </div>
                             </div>
@@ -316,11 +316,11 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Conquerors of Controversy</h4>
-                                    <span> Showcase your spontaneity, knowledge, and oratory skills in the event "Conquerors of Controversy."
+                                    <span> Exhibit your spontaneity, knowledge, and oratory in the event "Conquerors of Controversy."
 
                                         Speak on a topic for a minute, demonstrating your quick thinking and effective communication skills.
-                                        Engage in a debate round where you choose a side on a given topic and defend it passionately.
-                                        Step into the arena where words are your weapons, and only the sharpest minds prevail. Are you ready to conquer the controversy and prove your rhetorical prowess?
+                                        Engage in a debate where you take a position on a given topic and defend it passionately.
+                                        Step into the arena where words are your weapons, and only the sharpest minds prevail. Are you ready to conquer the debate and prove your rhetorical prowess?
 
                                         <br><br>&#x2022;Number of participants - 320
                                         <br>&#x2022;Number of teams - 320
@@ -366,7 +366,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>The Hidden Hand</h4>
-                                    <span> Read between the lines, solve the crime in time - The Hidden Hand awaits, where every move is a game changer.
+                                    <span> Read between the lines, crack open the puzzle - The Hidden Hand lurks! Every move is a potential game-changer.
                                         <br>
                                         <br>&#x2022;Number of teams - 100-150 teams
                                         <br>&#x2022;Number of people in one team - 3-5 per team</span>
@@ -462,14 +462,15 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Market Marvels</h4>
-                                    <span> Welcome to the Creative Marketing Challenge where innovation meets persuasion across three dynamic rounds! From captivating commercials to compelling debates, showcase your marketing mastery and win for the ultimate title of marketing marvel!
-
+                                    <span> From captivating commercials to engaging debates, display your marketing skills and win the ultimate title of Marketing Maven
                                         <br>
                                         <br>&#x2022;Number of teams - 80-100
                                         <br>&#x2022;Number of people in one team - 3-5</span>
                                 </div>
                             </div>
                         </div>
+
+                        
 
                     </div>
                 </div>
@@ -548,14 +549,17 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-8">
                         <div class="footer_widget">
-                            <div class="address_details text-center align-items-center">
-                                <img src="static/img/about/something.png" alt="TAS logo_png">
+                            <div class="footer-logo-container">
+                                <img src="static/img/about/something.png" alt="TAS logo" class="footer-logo-image">
                                 <h1> </h1>
                                 <!-- <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Come Meet Us!</h3> -->
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
                                 
                                
-                                 -->
+                                <div class="row justify-content-center book_btn">
+                                    <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="register-btn">REGISTER NOW</a>
+                                </div>
+                                
                                     <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
                                     <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
                                     </div>
@@ -575,6 +579,7 @@
                                 <li><a href="/about">History</a></li>
                                 <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                                 <li><a href="#">Events</a></li>
+                                <li><a href="https://www.instagram.com/pesu.tams?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
     
                             </ul>
                         </div>
@@ -618,16 +623,18 @@
             </div>
     
         </div>
-        <div class="copy-right_text" style="margin-top: -5%;">
+        <div class="copy-right_text">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12">
-                        <img src="static/img/banner/footer_banner.png" alt="TAS logo_png">
-                        <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                        </p>
+                    <div class="col-xl-12 text-center">
+                        <div class="footer-banner-container">
+                            <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
+                        </div>
+                        <div class="copyright-content">
+                            <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                                &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
