--- a/templates/venue.html
+++ b/templates/venue.html
@@ -253,6 +253,7 @@
                 </div>
             </div>
         </div>
+        
     </div>
 </div>
 
@@ -326,14 +327,16 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 col-md-8">
                         <div class="footer_widget">
-                            <div class="address_details text-center align-items-center">
-                                <img src="static/img/about/something.png" alt="TAS logo_png">
+                            <div class="footer-logo-container">
+                                <img src="static/img/about/something.png" alt="TAS logo" class="footer-logo-image">
                                 <h1> </h1>
                                 <!-- <h3 class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">Come Meet Us!</h3> -->
                                 <p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s"></p>
                                 
-                               
-                                 -->
+                                <div class="row justify-content-center book_btn">
+                                    <a href="https://forms.gle/DVBJk6t1zQarWdXs7" class="register-btn">REGISTER NOW</a>
+                                </div>
+                                
                                     <div class="gdlr-core-divider-item gdlr-core-divider-item-normal gdlr-core-left-align">
                                     <div class="gdlr-core-divider-line gdlr-core-skin-divider" style="border-color: #303B51; border-width: 2px;">
                                     </div>
@@ -353,7 +356,7 @@
                                 <li><a href="/about">History</a></li>
                                 <li><a href="https://forms.gle/ormi3s4MR5g2a6Gd6">Register</a></li>
                                 <li><a href="#">Events</a></li>
-    
+                                <li><a href="https://www.instagram.com/pesu.tams?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==">Instagram</a></li>
                             </ul>
                         </div>
                     </div>
@@ -399,9 +402,8 @@
         <div class="copy-right_text" style="margin-top: -5%;">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-12">
-                        <img src="static/img/banner/footer_banner.png" alt="TAS logo_png">
-                        <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                    <div class="footer-banner-container">
+                        <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
