--- a/templates/index.html
+++ b/templates/index.html
@@ -124,6 +124,30 @@
               </div>
            </div>
      </div>
+
+
+<!-- PESSAT - JEE - LOGO  -->
+     <div class="copy-right_text">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-12 text-center">
+                    <div class="footer-banner-container">
+                        <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- PESSAT - JEE - LOGO  ENDS -->
+
+
+
+
+
+
+
+
+
 <!-- slider_area_end -->
 <div class="brand_area black_bg">
     <div class="container">
@@ -207,7 +231,7 @@
 <!-- about_area_end  -->
 
 <!-- video_area_start  -->
-<div class="video_area" style="background: url('https://via.placeholder.com/1920x1080') no-repeat center center; background-size: cover; padding: 100px 0;">
+<div class="video_area" style="background-color: orange; padding: 100px 0;"> 
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-12">
