--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,12 +32,10 @@ body {
 }
 
 .video_area {
-  background: url('https://via.placeholder.com/1920x1080') no-repeat center center;
-  background-size: cover;
+  background-color: orange;
   padding: 100px 0;
   position: relative;
 }
-
 .video_area .container {
   position: relative;
   z-index: 2;
@@ -50,7 +48,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(239, 126, 25, 0.7); /* Optional: to darken the background image */
+  background: #ff8418b3; /* Optional: to darken the background image */
   z-index: 1;
 }
 
