--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2174,6 +2174,145 @@ h3 {
 .bradcam_bg_4 {
   background-image: url(../img/banner/details.png);
 }
+.bradcam_area_index {
+  position: relative;
+  z-index: 0;
+}
+
+.bradcam_area_index .single_bradcam {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center 20%;
+  padding-bottom: 100px;
+  padding-top: 100px;
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam {
+    padding: 150px 0;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .bradcam_area_index .single_bradcam {
+    padding: 200px 0;
+  }
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text {
+  position: relative;
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text {
+    margin: 0;
+  }
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text .shape_1 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text .shape_1 {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text .shape_1 img {
+    width: 100%;
+  }
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text .shape_2 {
+  position: absolute;
+  bottom: -50px;
+  left: 0;
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text .shape_2 {
+    width: 100px;
+    height: 100px;
+  }
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text .shape_2 img {
+    width: 100%;
+  }
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text span {
+  font-size: 40px;
+  font-weight: 400;
+  color: #FFFFFF;
+  text-transform: uppercase;
+  font-family: "Anton", sans-serif;
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text h3 {
+  font-family: "Anton", sans-serif;
+  font-size: 80px;
+  text-transform: capitalize;
+  font-weight: 400;
+  color: #fff;
+  line-height: 1;
+  margin-top: 5px;
+  margin-bottom: 23px;
+  font-family: "Monoton", cursive;
+  position: relative;
+  z-index: 9;
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text h3 span {
+  font-weight: 700;
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text h3 {
+    font-size: 30px;
+    line-height: 45px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  .bradcam_area_index .single_bradcam .bradcam_text h3 {
+    font-size: 54px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .bradcam_area_index .single_bradcam .bradcam_text h3 {
+    font-size: 100px;
+  }
+}
+
+.bradcam_area_index .single_bradcam .bradcam_text p {
+  font-size: 20px;
+  font-weight: 600;
+  color: #FFF;
+  margin-bottom: 34px;
+  margin-top: 10px;
+  font-family: "Monoton", cursive;
+}
+
+@media (min-width: 992px) and (max-width: 1200px) {
+  .bradcam_area_index .single_bradcam .bradcam_text p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 767px) {
+  .bradcam_area_index .single_bradcam .bradcam_text p {
+    font-size: 16px;
+  }
+}
+
 
 /* line 14, ../../Arafath/CL/December/236. Event-02/HTML/scss/_bradcam.scss */
 .bradcam_area {
