--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
             </div>
         </div>
     </header> 
-    <div class="bradcam_area">
+    <div class="bradcam_area_index">
         <div class="single_bradcam  d-flex align-items-center bradcam_bg_1 overlay" style="background-image: url('/static/img/banner/banner.png');">
               <div class="container">
                     <div class="row align-items-center justify-content-center">
