when will this end
Co-authored-by: Laxman Srivastava <laxmanclo@users.noreply.github.com>

--- a/templates/index.html
+++ b/templates/index.html
@@ -329,18 +329,16 @@
         </div>
 
     </div>
-    <div class="copy-right_text">
+    <div class="copy-right_text" style="margin-top: -5%;">
         <div class="container">
             <div class="row">
-                <div class="col-xl-12 text-center">
-                    <div class="footer-banner-container">
-                        <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
-                    </div>
-                    <div class="copyright-content">
-                        <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
-                            &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
-                        </p>
-                    </div>
+                <div class="footer-banner-container">
+                    <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
+                    <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                    </p>
                 </div>
             </div>
         </div>
