--- a/templates/history.html
+++ b/templates/history.html
@@ -399,9 +399,10 @@
                 <div class="row">
                     <div class="footer-banner-container">
                         <img src="static/img/banner/footer_banner.png" alt="TAS logo" class="footer-banner-image">
+                        <p class="copy_right text-center wow fadeInDown" data-wow-duration="1s" data-wow-delay=".5s">
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             &copy;<script>document.write(new Date().getFullYear());</script> PES University | Designed by the TAMS Technical Team
-    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
                 </div>
