--- a/templates/about.html
+++ b/templates/about.html
@@ -125,8 +125,8 @@
 
                  <div class="col-lg ">
                     <div class="section_title text-center mb-80">
-                        <br>
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">We ensure that the rock-solid foundation we help them build here – both, in terms of skills and values – will stand them in good stead no matter which career they choose. Along with the requisite academic and related skills, we try and instil empathy in our students for the less fortunate and a concern for the environment around them.</p><br><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"> We create opportunities not just for young people to learn, but also for them to experience the fulfillment that comes from sharing this learning with others. At PES, we will always be focused on delivering education that will help create the leaders of tomorrow’s world - men and women who will not just be successful in their capacities, but also contribute to and enrich the world they live in.</p>
+                        <br>We ensure that the rock-solid foundation we help them build here – both in terms of skills and values – will stand them in good stead no matter which career they choose. Along with the requisite academic and related skills, we try to instil empathy in our students for the less fortunate and a concern for the environment around them.
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"></p><br><p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s">We create opportunities not just for young people to learn, but also for them to experience the fulfilment that comes from sharing this learning with others. At PES, we will always be focused on delivering education that will help create the leaders of tomorrow’s world – men and women who will not just be successful in their capacities, but also contribute to and enrich the world they live in.</p>
                     </div>
             </div>
         </div>
@@ -143,8 +143,7 @@
                                         <div class="container box_1170">
                                             <h3 class="text-heading">About PESU</h3>
                                             <p class="sample-text">
-                                                Located in Bangalore, India, PES University is one of the country's premier teaching and research institutions, dedicated to providing "navigation for the real world" and inspiring students to find their true north. Graduates are equipped to thrive in a constantly evolving intellectual and technological landscape, thanks to the collaborative efforts of management, staff, students, and parents. The university fosters a vibrant student community with diverse interests pursued through various clubs and teams, including debates and the renowned PES band, with many events hosted in the air-conditioned auditorium.
-                                
+                                                Located in Bangalore, India, PES University is one of the country's premier teaching and research institutions, dedicated to providing navigation for the real world and inspiring students to find their true north. Graduates are equipped to thrive in a constantly evolving intellectual and technological landscape through the collaborative efforts of management, staff, students, and parents. The university fosters a vibrant student community with diverse interests pursued through various clubs and teams, including debates, and the renowned PES band, with many events hosted in the air-conditioned auditorium.
                                             </p>
                                            
                                         </div>
