--- a/templates/history.html
+++ b/templates/history.html
@@ -114,7 +114,7 @@
                     <div class="about_info pl-68">
                         <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Scientist</i> is an esteemed science fest fostering curiosity and creativity among 8th to 12th-grade students through workshops, seminars, and competitions.</p>
                         <br>
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Manager</i> focuses on cultivating managerial skills and leadership among grades 11 and 12 students through real-world business challenges.</p>
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Manager</i> focuses on cultivating managerial skills and leadership among grades 8 to 12 students through real-world business challenges.</p>
                    
                     </div>
                 </div>
