--- a/templates/events.html
+++ b/templates/events.html
@@ -109,11 +109,11 @@
                                 </div>
                                 <div class="performer_heading" >
                                     <h4>Narrative Nexus (AI Image Generation + Story Writing)</h4>
-                                    <span>Unleash your creativity by writing a scientific story and bringing it to life with AI-generated images! Immerse yourself in a world of imagination, storytelling, and cutting-edge technology. Join us for an unforgettable experience at our innovative event!
+                                    <span>Unleash your creativity by writing a scientific story and bringing it to life with AI-generated images! Immerse yourself in a world of imagination, storytelling, and cutting-edge technology. Join us for an unforgettable experience!
 
                                         <br><br>&#x2022;Number of participants - 300
                                         <br>&#x2022;Number of teams - 100
-                                        <br>&#x2022;Number of people in one team - 3
+                                        <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -133,7 +133,7 @@
 
                                         <br><br>&#x2022;Number of participants - 342
                                         <br>&#x2022;Number of teams - 114
-                                        <br>&#x2022;Number of people in one team - 3
+                                        <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
                                         </span>
                                 </div>
@@ -152,7 +152,7 @@
                                     <span>Unleash your coding wizardry and creative genius in this high-octane hackathon. Dive into a world of algorithms, logic, and innovation as you race against the clock to develop groundbreaking solutions.
                                         <br><br>&#x2022;Number of participants - 228
                                         <br>&#x2022;Number of teams - 76
-                                        <br>&#x2022;Number of people in one team - 2
+                                        <br>&#x2022;number of participants per team - 2
                                         click on the banner to learn more 
                                         </span>
                                 </div>
@@ -172,7 +172,7 @@
 
                                         <br><br>&#x2022;Number of participants - 200
                                         <br>&#x2022;Number of teams - 50
-                                        <br>&#x2022;Number of people in one team - 4
+                                        <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -191,7 +191,7 @@
                                     <span>Engineer your way to victory in our bridge-building challenge! Construct a sturdy bridge using provided materials and showcase your engineering skills. Work with your team to create a structure that can withstand the weight test. Join us at TAMS 2024 to put your skills to the test!
                                         <br><br>&#x2022;Number of participants - 180
                                         <br>&#x2022;Number of teams - 60
-                                        <br>&#x2022;Number of people in one team - 3
+                                        <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -210,7 +210,7 @@
                                     <span>Get ready to rev up your creativity! Join our car-making workshop and design your own unique car. Use a variety of materials to bring your design to life, and then test it in a thrilling competition. Show off your innovation and race to victory at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
-                                        <br>&#x2022;Number of people in one team - 4
+                                        <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -226,10 +226,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Engineering the Future: AeroQuest (Rocketry)</h4>
-                                    <span>Embark on a journey to the cosmos with our thrilling rocketry adventure! Design and launch your own rockets, learn about the wonders of space, and compete in exciting challenges. Join us for an out-of-this-world experience at TAMS 2024!
+                                    <span>Embark on a journey to the cosmos with our thrilling rocketry adventure! Design and launch your own rockets, learn about the wonders of space, and compete in exciting challenges. Join us for an out-of-the-world experience at TAMS 2024!
                                         <br><br>&#x2022;Number of participants - 216
                                         <br>&#x2022;Number of teams - 72
-                                        <br>&#x2022;Number of people in one team - 3
+                                        <br>&#x2022;number of participants per team - 3
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -245,9 +245,8 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Science Carnival - Science Symposium</h4>
-                                    <span>Step right up and experience the thrill of our science carnival! Dive into hands-on experiments, mind-bending demonstrations, and interactive exhibits. Unleash your inner scientist and join us for a day of fun and discovery at TAMS 2024!
-                                        <br>&#x2022;25 stalls for model showcasing
-                                        for the events and games - unlimited!
+                                    <span>Step right up and experience the thrill of our science carnival! Dive into hands-on experiments, mind-bending demonstrations, and interactive exhibits. Unleash your inner scientist and join us for a day of fun and discovery!
+                                        <br>&#x2022;25 stalls for model-making,events and games!
                                         click on the banner to learn more 
                                         </span>
                                 </div>
@@ -267,7 +266,7 @@
 
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
-                                        <br>&#x2022;Number of people in one team - 4
+                                        <br>&#x2022;number of participants per team - 4
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -294,7 +293,7 @@
 
                                         <br><br>&#x2022;Number of participants -500 
                                         <br>&#x2022;Number of teams - 125 
-                                        <br>&#x2022;Number of people in one team - 3-4 
+                                        <br>&#x2022;number of participants per team - 3-4 
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -316,7 +315,7 @@
                                         place as the Ultimate Champions.
                                         <br><br>&#x2022;Number of participants - 700
                                         <br>&#x2022;Number of teams - 700
-                                        <br>&#x2022;Number of people in one team - 1
+                                        <br>&#x2022;number of participants per team - 1
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -342,7 +341,7 @@
                                         Showcase your teamwork and ingenuity in a fun, competitive environment!
                                         <br><br>&#x2022;Number of participants -  400  
                                         <br>&#x2022;Number of teams - sorted during the event based on performance 
-                                        <br>&#x2022;Number of people in one team - sorted during the event based on performance
+                                        <br>&#x2022;number of participants per team - sorted during the event based on performance
                                         click on the banner to learn more 
                                      </span>
                                 </div>
@@ -366,7 +365,7 @@
 
                                         <br><br>&#x2022;Number of participants - 320
                                         <br>&#x2022;Number of teams - 320
-                                        <br>&#x2022;Number of people in one team - 1
+                                        <br>&#x2022;number of participants per team - 1
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -385,7 +384,7 @@
                                     <span> Experience the thrill of Monopoly Madness: Cash in or crash out in this high-stakes event! Compete against others as you strategize, negotiate, and navigate your way through the twists and turns of this classic game. Grab properties, build empires, and outsmart your opponents to emerge victorious. Join us for a gaming experience like no other, where every decision counts and fortunes can change in an instant!
                                         <br>
                                         <br>&#x2022;Number of teams - 100-150
-                                        <br>&#x2022;Number of people in one team - 3-5 per team
+                                        <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -404,7 +403,7 @@
                                     <span> Running around the campus on a thrilling adventure and racing to uncover the identity and location of a mysterious missing personality. Crack clues ,decipher codes, and solve puzzles to win!
                                         <br>
                                         <br>&#x2022;Number of teams - 100-150 teams
-                                        <br>&#x2022;Number of people in one team - 3-5 per team
+                                        <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -423,7 +422,7 @@
                                     <span> Read between the lines, crack open the puzzle - The Hidden Hand lurks! Every move is a potential game-changer.
                                         <br>
                                         <br>&#x2022;Number of teams - 100-150 teams
-                                        <br>&#x2022;Number of people in one team - 3-5 per team
+                                        <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -443,7 +442,7 @@
 
                                         <br>
                                         <br>&#x2022;Number of teams - 50
-                                        <br>&#x2022;Number of people in one team - Solo or 2-4 per team 
+                                        <br>&#x2022;number of participants per team - Solo or 2-4 per team 
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -463,7 +462,7 @@
 
                                         <br>
                                         <br>&#x2022;Number of teams - 20-40
-                                        <br>&#x2022;Number of people in one team - 3-5 per team
+                                        <br>&#x2022;number of participants per team - 3-5 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -483,7 +482,7 @@
 
                                         <br> 
                                         <br>&#x2022;Number of teams - 150
-                                        <br>&#x2022;Number of people in one team - 3-5 per team 
+                                        <br>&#x2022;number of participants per team - 3-5 per team 
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -502,8 +501,8 @@
                                     <span> Step onto the stage and leave the audience awestruck with your wit and speaking prowess. Show off your communication skills, deliver captivating speeches, and let your spontaneity shine as you entertain and engage the crowd.
 
                                         <br><br>&#x2022;Number of participants - 150
-                                        <br>&#x2022;Number of people in one team (Kiss & Kick) - 1 per team
-                                        <br>&#x2022;Number of people in one team (The impact commentator) - 2-3 per team
+                                        <br>&#x2022;number of participants per team (Kiss & Kick) - 1 per team
+                                        <br>&#x2022;number of participants per team (The impact commentator) - 2-3 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -524,7 +523,7 @@
 
                                         <br>
                                         <br>&#x2022;Number of teams - 20-25 
-                                        <br>&#x2022;Number of people in one team - 4-5 per team
+                                        <br>&#x2022;number of participants per team - 4-5 per team
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -543,7 +542,7 @@
                                     <span> From captivating commercials to engaging debates, display your marketing skills and win the ultimate title of Marketing Maven
                                         <br>
                                         <br>&#x2022;Number of teams - 80-100
-                                        <br>&#x2022;Number of people in one team - 3-5
+                                        <br>&#x2022;number of participants per team - 3-5
                                         click on the banner to learn more 
                                     </span>
                                 </div>
