--- a/templates/events.html
+++ b/templates/events.html
@@ -262,7 +262,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Tech Toxin</h4>
-                                    <span> Put your chemistry knowledge to the test in the Tech Toxin arena! Solve chemical puzzles, unlock clues, and escape before time runs out in this thrilling escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
+                                    <span> Put your chemistry knowledge to test in the Tech Toxin arena! Solve chemical puzzles, unlock clues, and escape before time runs out escape room experience. Gather your friends, collaborate, and use your chemistry skills to outsmart the room. Can you unravel the mysteries and escape in time?
 
                                         <br><br>&#x2022;Number of participants - 240
                                         <br>&#x2022;Number of teams - 60
@@ -309,13 +309,10 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Game of Intellects</h4>
-                                    <span> Teams wanting to race in GOI/ Battle of the Intellects by unlocking the power of your
-                                        collective minds through quiz twisters followed by puzzles that can give your minds a spin and finally leading
-                                        you to the inner circle where you fight your way through intellectual challenges with a twist to earn your
-                                        place as the Ultimate Champions.
+                                    <span>  Want to race in the Battle of Intellects? Get ready to unlock the power of your collective minds through quiz twisters and enter the inner circle to showcase your intellectual acumen. Compete for the coveted title of the Ultimate Champion!
                                         <br><br>&#x2022;Number of participants - 700
                                         <br>&#x2022;Number of teams - 700
-                                        <br>&#x2022;number of participants per team - 1
+                                        <br>&#x2022;number of participants per team - 1 
                                         click on the banner to learn more 
                                     </span>
                                 </div>
@@ -332,7 +329,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Rube’s Gizmo Galore</h4>
-                                    <span> F
+                                    <span>
                                         Explore creativity and innovation at Rube’s Gizmo Galore! Join us for:
 
                                         Mind-Tickling Quiz: Test design skills and creativity.
@@ -518,7 +515,7 @@
                                 </div>
                                 <div class="performer_heading">
                                     <h4>Ruins to Riches</h4>
-                                    <span> B
+                                    <span>
                                         Step into the world of "Ruins to Riches"! Bid strategically, negotiate tactfully, and rebuild a city from ancient ruins to a thriving metropolis. Compete against others to create the most prosperous urban landscape. Join us for a dynamic event where every decision shapes the future of your city!
 
                                         <br>
