--- a/templates/history.html
+++ b/templates/history.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="col-lg-5 col-md-6">
                     <div class="about_info pl-68">
-                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Scientist</i> is an esteemed science fest fostering curiosity and creativity among 8th to 12th-grade students through workshops, seminars, and competitions.</p>
+                        <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Scientist</i> is an esteemed science fest fostering curiosity and creativity among 8 to 12 grade students through workshops, seminars, and competitions.</p>
                         <br>
                         <p  class=" wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".6s"><i>The Amateur Manager</i> focuses on cultivating managerial skills and leadership among grades 8 to 12 students through real-world business challenges.</p>
                    
